[package]
name = "password-rules-parser"
version = "1.1.0"
authors = ["1Password"]
description = "Parser for the HTML passwordrules attribute"
keywords = ["passwords", "parsers", "passwordrules", "apple", "1password"]
categories = ["parser-implementations", "wasm", "web-programming"]
repository = "https://github.com/1Password/password-rules-parser"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.14"
nom = "7"
pretty-lint = "0.1"
once_cell = "1"

[dev-dependencies]
dialoguer = "0.8"
anyhow = "1.0"
